# my_operating_system

./: .gitignore  8088 汇编速查手册 .txt  Doxyfile  readme.md  update_img.sh
wyf-os/: CMakeLists.txt  a.img  bochsrc.bxrc  kernel.sym  makefile  note_week15.md  readme.md
wyf-os/boot/: boot.asm  head.asm  makefile  readme.md
wyf-os/include/: basic.h  console.h  const.h  cursor.h  debug.h  global.h  head.h  interrupt.h  irq.h  kernel.h  macro.inc  message.h  pm.inc  process.h  protect.h  ptrace.h  semaphore.h  stdio.h  string.h  sys_call.h  sys_tasks.h  sys_vcall.h  test.h  tty.h  tty_drv.h  type.h
wyf-os/include/chr_drv/: console.h  tty.h  tty_drv.h
wyf-os/include/common/: common.h  debug.h  stdlib.h  string.h
wyf-os/include/hd_drv/: hd.h
wyf-os/include/intr/: clock.h  interrupt.h
wyf-os/include/mm/: memory.h  mm.h  page.h
wyf-os/include/proc/: process.h  schedule.h
wyf-os/include/protect/: protect.h
wyf-os/include/test/: test.h
wyf-os/init/: head.asm  kernel.elf  main.c  makefile  readme.md
wyf-os/kernel/: basic.asm  cursor.c  debug.c  entry_32.asm  interrupt.c  interrupt_table.asm  makefile  message.c  printk.c  process.c  protect.c  readme.md  restart.asm  schedule.c  semaphore.c  sys_call.c  sys_tasks.c  sys_vcall.c  test.c  vsprintf.c
wyf-os/kernel/chr_drv/: console.c  debug.c  out_char.c  printk.c  tty.c  tty_drv.c
wyf-os/kernel/common/: debug.c  stdlib.c  string.c  vsprintf.c
wyf-os/kernel/hd_drv/: hd.c
wyf-os/kernel/intr/: clock.c  interrupt.c  interrupt_table.asm
wyf-os/kernel/mm/: forkexit.c  memory.c  mm.c  page.c
wyf-os/kernel/test/: test.c
wyf-os/lib/: makefile  string.c  vsprintf.c
wyf-os/test/: test.md  tty.dot
wyf-os/user/: hello.c
(+1054 files in other folders)
